copy from portfolio

--- a/contact.html
+++ b/contact.html
@@ -32,12 +32,12 @@
     <div class="container">
         <!-- section on left side of page -->
         <div class="row mt-4">
-            <div class="col-md-8 mr-3 p-4 ">
-                    <div>
-                    <h2>About Me</h2>
+            <div class="col-md-8">
+                <div class="card">
+                    <h2 class="card-header">About Me</h2>
                     <hr>
                     <img src="assets/images/profile-1.png" class="img-fluid img-circle float-left mr-4 w-50" alt="Lorenzo Vasquez Profile Picture"/>
-                    <p>
+                    <p class="card-text">
                             <span id="text-intro"> I’m an aspiring web developer </span> who loves everything about the web. 
                             I've lived in lots of different places and have worked in lots of different jobs. 
                             I’m excited to bring my life experience to the process of building fantastic looking websites.
@@ -58,7 +58,7 @@
             </div>
 
             <!-- section in right side of page -->
-            <div class="col-md ml-3 p-4 ">
+            <div class="col-md">
                 <h3  id="connect-with-me">Connect</h3>
                 <hr>
                 <img src="" alt="">
