--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Semantic-UI</title>
+    <title>Lorenzo Vasquez | Full-Stack Developer</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -23,7 +23,9 @@
         <div class="menu">
           <a href='https://vasquezlf.github.io/hangman' class="item">Hangman</a>
           <a href='https://vasquezlf.github.io/crystalcollector' class="item">Crystal Collector</a>
-          <a href='https://vasquezlf.github.io/triviagame' class="item">triviagame</a>
+          <a href='https://vasquezlf.github.io/triviagame/' class="item">Trivia Game</a>
+          <a href='https://vasquezlf.github.io/giffygenerator/' class="item">Giffy Generator</a>
+          <a href='https://vasquezlf.github.io/trainsched/' class="item">Train Scheduler</a>
         </div>
       </div>
     </div>
@@ -52,12 +54,12 @@
                         </div>
                           <h1 class="header">About Me</h1>
                           <div class="description">
-                            <p class="_largeText"><b>I’m an aspiring web developer</b> who loves everything about the web. I've lived in lots of different places 
+                            <p class="_largeText"><b>I’m an aspiring full-stack developer</b> who loves everything about the web. I've lived in lots of different places 
                               and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic 
-                              looking websites. I am life-long learner who's always interested in expanding my skills. 
+                              looking web apps. I am life-long learner who's always interested in expanding my skills. 
                             </p>
                             <p class="_largeText">
-                                When I have free time I like to exercise, paint, skiing, hiking, travelling, or simply jamming out with my uke.
+                                When I have free time I like to exercise, paint, ski, hike, or simply jamming out on my uke.
                             </p>
                           </div>
                       </div>
@@ -70,20 +72,22 @@
                                 <div class="content">
                                   <h5 class="header">Learning and Growing Skills In:</h5>
                                   <div class="ui list">
-                                      <div class="item">Apples</div>
-                                      <div class="item">Pears</div>
-                                      <div class="item">Oranges</div>
+                                      <div class="item">HTML/CSS</div>
+                                      <div class="item">JavaScript</div>
+                                      <div class="item">MEAN Stack</div>
+                                      <div class="item">Firebase</div>
+                                      <div class="item">WordPress</div>
                                     </div>
                                 </div>
                               </div>
                             </div>
                             <div class="column">
-                                <h5 class="header">Seeking Following Opportunities:</h5>
+                                <h5 class="header">Seeking Following Opportunities in:</h5>
                                 <div class="ui list">
-                                    <div class="item">Apples</div>
-                                    <div class="item">Pears</div>
-                                    <div class="item">Oranges</div>
-                                  </div>
+                                  <div class="item">JavaScript Developer Roles</div>
+                                  <div class="item">Freelance Work - Web Development</div>
+                                  <div class="item">Volunteer opportunities in youth empowerment</div>
+                                </div>
                             </div>
                           </div>
                         </div>
@@ -93,36 +97,35 @@
 
             <!-- ************* RIGHT COL ****************** -->
             <div class="ui six wide column  ">
-                  <div class="ui piled segment _verticalStretch">
-                      <h3 class="ui header">Dynamic Content (Coming Soon)</h3>
-                        <p>Eu quo homero blandit intellegebat. Incorrupte consequuntur mei id.</p>
-                    </div>
-                <div class="ui piled segment _verticalStretchLess ">
-                    <div class="ui fluid _centerButtons">
-                    <h3 class="ui header fluid center aligned">Connect</h3>
-                    </div>
-                    <div class="ui fluid _centerButtons">
-                      <button class="ui massive circular linkedin icon button">
-                          <i class="linkedin icon"></i>
-                        </button>
-                        <button class="ui massive circular github icon button">
-                          <i class="github icon"></i>
-                        </button>
-                        <button class="ui massive circular facebook icon button">
-                          <i class="facebook icon"></i>
-                        </button>
-                    </div>
-                    <div class="ui fluid _centerButtons ">
-                    <div class="ui animated fade button" tabindex="0">
-                        <div class="visible content _sendMessageButton">Send Message</div>
-                        <div class="hidden content">
-                          vasquez.lf@gmail.com
-                        </div>
-                      </div>
+              <div class="ui piled segment _verticalStretch">
+                <h3 class="ui header">Projects</h3>
+                <div class="ui image">
+                  <img id="image-holder" src="">
+                </div>
+              </div>
+              <div class="ui piled segment _verticalStretchLess ">
+                <div class="ui fluid _centerButtons">
+                <h3 class="ui header fluid center aligned">Connect</h3>
+                </div>
+                <div class="ui fluid _centerButtons">
+                  <a class="ui massive circular linkedin icon button" href="https://www.linkedin.com/in/lorenzovasquez">
+                      <i class="linkedin icon"></i>
+                  </a>
+                  <a class="ui massive circular github icon button" href="https://github.com/vasquezlf">
+                    <i class="github icon"></i>
+                  </a>
+                </div>
+                <div class="ui fluid _centerButtons ">
+                <div class="ui animated fade button" tabindex="0">
+                    <div class="visible content _sendMessageButton">Send Message</div>
+                    <div class="hidden content">
+                      vasquez.lf@gmail.com
                     </div>
                   </div>
-                <!-- </div> -->
-                
+                </div>
+              </div>
+            <!-- </div> -->
+            
             </div>
           </div>
 
@@ -139,5 +142,6 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
     <!-- Custom JavaScript -->
     <script type="text/javascript" src="assets/javascript/main.js"></script>
+    <script type="text/javascript" src="assets/javascript/slideshow.js"></script>
   </body>
 </html>
