added more stuff

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <a href='https://vasquezlf.github.io/triviagame/' class="item" target="_blank">Trivia Game</a>
           <a href='https://vasquezlf.github.io/giffygenerator/' class="item" target="_blank">Giffy Generator</a>
           <a href='https://vasquezlf.github.io/trainsched/' class="item" target="_blank">Train Scheduler</a>
+          <a href='https://vasquezlf.github.io/friendfinder/' class="item" target="_blank">Friend Finder</a>
         </div>
         <a href='https://group-calendar-app.firebaseapp.com/' class="item" target="_blank">Project 1 - Ohm</a>
         <a href='https://mighty-taiga-95027.herokuapp.com/' class="item" target="_blank">Project 2 - Tree Logger</a>
@@ -61,6 +62,10 @@
                             <p class="_largeText"><b>I’m an aspiring full-stack developer</b> who loves everything about the web. I've lived in lots of different places
                               and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic
                               looking web apps. I am life-long learner who's always interested in expanding my skills.
+                            </p>
+                            <p class="_largeText">
+                              I am currently employed as a Quality Assurance / Automation Engineer at Workday. My tasks include testing the UI, web services,
+                              performance/load, writetest cases, and automate tests.
                             </p>
                             <p class="_largeText">
                                 When I have free time I like to exercise, paint, ski, hike, or simply jamming out on my uke.
@@ -105,12 +110,12 @@
                 <h3 class="ui header">Projects</h3>
                 <div class="ui">
                   <!-- <a href="https://guarded-hamlet-72730.herokuapp.com/" target="_blank"><img id="image-holder" src="assets/images/capstone.png"></a> -->
+                  <div id="image-holder" class="ui image"></div>
+                  <div class="ui divider"></div>
                   <div id="ui button group ">
                     <button id="previous" class="ui button">Previous</button>
                     <button id="next" class="ui button">Next</button>
                   </div>
-                  <div class="ui divider"></div>
-                  <div id="image-holder" class="ui image"></div>
                 </div>
               </div>
               <div class="ui piled segment _verticalStretchLess ">
