--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
                                   <div class="ui list">
                                       <div class="item">HTML/CSS</div>
                                       <div class="item">JavaScript</div>
+                                      <div class="item">MongoDB</div>
+                                      <div class="item">MySQL</div>
                                       <div class="item">React</div>
                                       <div class="item">Firebase</div>
                                       <div class="item">WordPress</div>
